--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">  <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">  <!-- Bootstrap 5.2.3 -->
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js"></script>
+        <script defer src="js/script.js"></script>
     </head>
-    <body>
-    
+    <body class="bg-light">
+        <div class="container position-absolute top-50 start-50 translate-middle">
+            <label class="form-label text-bold">Password</label>
+            <div class="card">
+                <div id="password" class="card-body"></div>
+            </div>
+        </div>
     </body>
 </html>
